# ark_algebra_py

./: Cargo.toml  README.md  pyproject.toml
.env/: pyvenv.cfg
.github/workflows/: CI.yml  docs.yml
examples/: pairing.py  point.py  polynomial.py  scalar.py
python/ark_algebra_py/: __init__.py
src/: field.rs  lib.rs  pairing.rs  point.rs  polynomial.rs  utils.rs  wrapper.rs
