[package]
name = "algebra-py"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "ark_algebra_py"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.19.2", features = ["extension-module", "abi3-py37"] }
ark-std = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.0"
ark-ec = "0.4.0"
ark-ff = "0.4.0"
ark-poly = "0.4.0"
rayon = "1.6.1"
hex = "0.4.3"
num-traits = "0.2.15"

[features]
default = ["parallel", "asm"]
parallel = ["ark-ec/parallel", "ark-ff/parallel", "ark-poly/parallel"]
asm = ["ark-ff/asm"]
